objects/GF_Task__c.object
<CustomObject>
    <description>FV2 : This object is used for GF Tasks.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>FV2: Comments related to task created</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>FV2:Due date for the task created</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_in_GMT__c</fullName>
        <formula>IF(ISBLANK(Due_Date__c),&apos;&apos;,text(Due_Date__c)&amp;&quot; GMT&quot;)</formula>
        <label>Due Date in GMT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Void__c</fullName>
        <description>FV2 : Used to write the reason for void.</description>
        <label>Reason for Void</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>FV2:Subject for the task created</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FV2:Look up to Team Room object</description>
        <label>Team Room</label>
        <referenceTo>Team_Room__c</referenceTo>
        <relationshipLabel>GF Tasks</relationshipLabel>
        <relationshipName>GF_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>FV2: Type of Task created</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design In</fullName>
                </value>
                <value>
                    <fullName>Tapeout</fullName>
                </value>
                <value>
                    <fullName>Prototype</fullName>
                </value>
                <value>
                    <fullName>RTR/RTP</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>assignTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FV2:Look up to user object</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GF_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>send_email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2:To validate whether to send email or not</description>
        <label>Send Notification Email</label>
        <type>Checkbox</type>
    </fields>
    <label>GF Task</label>
    <nameField>
        <label>GF Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GF Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ExternalUserValidation</fullName>
        <active>true</active>
        <description>FV2:External user can not add internal user as Asssigned to</description>
        <errorConditionFormula>AND 
( 
NOT(ISPICKVAL($User.UserType,&apos;Standard&apos;)), 
ISPICKVAL(assignTo__r.UserType,&apos;Standard&apos;) 
)</errorConditionFormula>
        <errorDisplayField>assignTo__c</errorDisplayField>
        <errorMessage>External user can not add internal user as assigned to</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GFTaskDueDtNotInPast</fullName>
        <active>true</active>
        <description>FV2:Due date cannot be past date.</description>
        <errorConditionFormula>Due_Date__c  &lt; Today()</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due date cannot be past date. Enter valid date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReasonForVoidValidation</fullName>
        <active>true</active>
        <description>FV2:Enter Reason for Void</description>
        <errorConditionFormula>AND 
( 
ISPICKVAL(Status__c,&apos;Void&apos;), 
($User.Id = OwnerId || $User.Id= assignTo__r.Id), 
ISBLANK(Reason_for_Void__c) 
)</errorConditionFormula>
        <errorDisplayField>Reason_for_Void__c</errorDisplayField>
        <errorMessage>Enter Reason for Void</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VoidOnlyForUserOrAssignee</fullName>
        <active>true</active>
        <description>FV2 : Used for checking to select the Void status only for User or Assignee.</description>
        <errorConditionFormula>AND 
( 
ISPICKVAL(Status__c,&apos;Void&apos;), 
NOT($User.Id = OwnerId || $User.Id= assignTo__r.Id) 
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status Can be Void only for Owner and Assignee</errorMessage>
    </validationRules>
</CustomObject>